# parking-lot

./: .env.example  .gitignore  CONTRIBUTING.md  INSTALLATION.md  README.md  USAGE.md  examples.py  main.py  package-lock.json  package.json  requirements.txt  review-conversation.sh  tailwind.config.ts  test_performance.py
MCP-planner/: README.md  index.html  package-lock.json  package.json
MCP-planner/src/: App.tsx  index.css  types.ts
ai-duo-validator/: QUICKSTART.md  README.md  demo.py  demo_auto.py  orchestrator  requirements.txt  setup.py
ai-duo-validator/examples/: authentication_task.md  rate_limiting_task.md
ai-duo-validator/prompts/: agent_a_executor.md  agent_b_validator.md
ai-duo-validator/src/: __init__.py  cli.py  formatter.py  orchestrator.py  parser.py  state.py
ai-duo-validator/tests/: __init__.py  test_orchestrator.py  test_parser.py
ai-pc-eyes/: screen_automation.py
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/settings/: page.tsx
audio-chat/: setup.py
audio-chat/examples/: example_conversation_complex.json
audio-chat/prompts/: claude_prompt.xml  (+1 more)
codify-review/: code-comprehension-lab.html
examples/: basic_usage.py  example_conversation_simple.json  example_conversation_text.txt
freeCAD/: README.md  SETUP.md  __init__.py  requirements.txt
heb-ocr/: main.py  pyproject.toml  requirements-dev.txt
heb-ocr/examples/: basic_usage.py
heb-ocr/src/hebrew_ocr/: __init__.py  config.py  llm_corrector.py
lib/: github.ts  utils.ts
mouceifi/: .gitignore  LICENSE  README.md  TESTING.md  demo.py  requirements.txt  run_tests.py  setup.py
prisma/: schema.prisma
serchify/: .eslintrc.js  .gitignore  README.md  jest.config.js  manifest.json  package.json
src/: conversation_review_agent.py
vibe-k8ds/: ACTION_ITEMS.md  DECISIONS_TEMPLATE.md  EXECUTIVE_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md
(+97 files in other folders)
