[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hebrew-ocr"
version = "0.1.0"
description = "A powerful tool for converting Hebrew documents to Markdown using OCR and LLM correction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ocr", "hebrew", "markdown", "tesseract", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pytesseract>=0.3.10",
    "Pillow>=11.3.0",
    "pdf2image>=1.16.3",
    "ollama>=0.3.15",
    "markdown>=3.5",
    "python-markdown-math>=0.8",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
hebrew-ocr = "hebrew_ocr.cli:cli"

[project.urls]
Homepage = "https://github.com/thamam/parking-lot"
Repository = "https://github.com/thamam/parking-lot"
Issues = "https://github.com/thamam/parking-lot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=hebrew_ocr --cov-report=term-missing"
